# bivariate

./: .coverage  .gitignore  Climate_Data_Washington.csv  Climate_Data_Washington_Metric.csv  README.md  README_old.md  Test_Climate.py  __init__.py  bivariate-2.0.0-py3-none-any.whl  bivariate_class.py  class_comparison.py  class_dataset.py  class_distribution.py  class_summary.py  class_test.ipynb  data_exploration.py  func_ev.py  func_univariate.py  goodness_of_fit.py  helpers.py  manual.md  manual.md.backup  pack_bivariate.py  pack_exploration.py  pack_extreme.py  pack_gof.py  pack_init.py  pack_univariate.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test.ipynb  univariate_fit.py
.github/workflows/: docs.yml  figures.yml  learn-git-actions.yml.txt  publish-pypi.yml  tests.yml
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  (+202 more)
.spyproject/config/: workspace.ini
bivariate/: __init__.py  class_dataset.py  class_fitresults.py  class_multivar.py
bivariate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.rst
github/workflows/: publish.yml  (+2 more)
old/: func_bivariate.py  func_data_exploration.py  func_goodness_of_fit.py  functions_any.py
old_package/: Test_Climate.py  Test_Waves.py  __init__.py  bivariate_fit.py  data_exploration.py  extreme_value_analysis.py  helpers.py  test.py  univariate_fit.py
src/: class_multivar.py
tests/: Test_copulas.ipynb  Testing_dataset_class.ipynb  Testing_notebook.ipynb  bivariate-2.0.0-py3-none-any.whl  examples.ipynb  examples.ipynb.orig  pyprojet.toml  test.py  test_bivariate.py
~/: .pypirc
(+1002 files in other folders)
